Command cost is now by default taken from the team balance (this can be changed in team.yml) 

Bug Fixes: 
Fixed a problem when placeholder API is not present on the server.	
Fixed a problem where a players team name was not removed when they left the team


3.1.1: 
Features: 
Added team warps with the commands 
/team warp <name> [password] - warp to the specified warp
/team warps - view a list of your teams warps
/team setwarp <name> [password] - Creates a new warp for your team
/team delwarp <name> [password] - Deletes a warp (owners do not need to know the password to do this

Added the following admin commands:
/teama warp <team> <warp> - Used to teleport to a teams warp, leave the warp blank to get a list of their warps 
/teama setwarp <team> <name> - Used to set a warp for that team
/teama delwarp <team> <name> - Used to delete a warp from that team

Bug Fixes: 
Fixed 2 bugs with updating messages.yml to the most recent version
Fixed a problem where players could use formatting codes in /team color

3.1.2
Features: 
Added integration with zKoth 
Added /team purge to reset team score 

Improvements:
Improved BelowNameChangeEvent backend
tab complete for /team color is now lower case
Commands which require a team name are no longer case sensitive
use %betterteams_teamscore_{rank}) to get the team name of the team with that rank

Bug Fixes: 
Fixed a bug with formatted strings missing %s (https://github.com/booksaw/BetterTeams/issues/20)

3.1.3
Features: 
Score will decrease a configurable amount on player death

Bug Fixes: 
Fixed bug where team nametag was not removed when a player left the team (https://github.com/booksaw/BetterTeams/issues/22)
Fixed a bug where invites were not invalidated once a player joins a team (https://github.com/booksaw/BetterTeams/issues/23)


TODO (any TODO which is not specifically code), mainly used for reminders to update documentation



Headings: 
Features: 


Improvements:


Bug Fixes: 
