@@ -1,5 +1,5 @@
 name: BetterTeams
-version: 3.1.2
+version: 3.1.3
 author: booksaw
 description: A plugin to create teams with other players
 main: com.booksaw.betterTeams.Main
